# gitopsify

./: .gitignore  Cargo.toml  README.md
output/: helmrelease.yaml  helmrepository.yaml  kube-prometheus-stack_helmresources.yaml  postgres-operator_helmresources.yaml  values.yaml
src/: cli.rs  convert.rs  detect.rs  fluxgen.rs  main.rs
