[package]
name = "gitopsify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"]}
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.9"
duct = "0.13"
anyhow = "1.0.98"
serde_json = "1.0.140"
